apps/networkpolicy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: bookstore
spec:
  podSelector: {}
  policyTypes:
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: bookstore
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rds
  namespace: bookstore
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [user-service, book-service, order-service]
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.160.0/20
        - ipBlock:
            cidr: 10.0.176.0/20
        - ipBlock:
            cidr: 10.0.208.0/20
      ports:
        - protocol: TCP
          port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-order-to-book-egress
  namespace: bookstore
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: book-service
      ports:
        - protocol: TCP
          port: 8000
